<resources>
    <string name="app_name">UMÊ ĐỌC SÁCH</string>

    <string name="nav_home">Home</string>
    <string name="nav_nguoidung">Thông tin Người Dùng</string>

    <string name="nav_mucuathich">Mục Ưa Thích</string>

    <string name="app_account">Account</string>


    <string name="app_taikhoanvabaomat">Tài Khoản và bảo mật</string>
    <string name="app_dangnhap">Đăng Nhập</string>
    <string name="app_dangxuat">Đăng Xuất</string>
    <string name="navigation_drawer_open">open navigation</string>

    <string name="navigation_drawer_close">close navigation</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>